--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <link rel="stylesheet" href="styles.css" />
-    <title>React App</title>
+    <title>Keeper-note</title>
   </head>
   <body>
     <div id="root"></div>
