--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="styles.css" />
     <title>Keeper-note</title>
+    <link rel="icon" href="/img/icon.ico" />
   </head>
   <body>
     <div id="root"></div>
